--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Leage of Extraordinary Makers",
   "main": "server.js",
   "scripts": {
-    "start": "PORT=3000 node server.js",
+    "start": "node server.js",
     "test": "eslint ."
   },
   "engines": {
